--- a/app/src/main/res/layout/fragment_consult.xml
+++ b/app/src/main/res/layout/fragment_consult.xml
@@ -81,8 +81,9 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <q.rorbin.qrefreshlayout.QRefreshLayout
+        <com.andview.refreshview.XRefreshView
             android:id="@+id/refreshlayout"
+            android:background="#f3f3f3"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <android.support.v7.widget.RecyclerView
@@ -92,7 +93,7 @@
 
             </android.support.v7.widget.RecyclerView>
 
-        </q.rorbin.qrefreshlayout.QRefreshLayout>
+        </com.andview.refreshview.XRefreshView>
         <com.victor.loading.rotate.RotateLoading
             android:layout_width="80dp"
             android:layout_height="80dp"
